# deckmaster

deckmaster-cli/: Cargo.toml
deckmaster-cli/src/: main.rs
deckmaster-cli/tests/: cli_integration.rs
deckmaster-core/: Cargo.toml
deckmaster-core/src/: document.rs  io.rs  lib.rs  model.rs  ops.rs  package.rs
deckmaster-core/tests/: document.rs  ops.rs  package_and_validation.rs  roundtrip.rs
deckmaster-pptx/: Cargo.toml
deckmaster-pptx/src/: embedded_json.rs  export.rs  import.rs  lib.rs  package.rs  presentation_parser.rs  presentation_xml.rs  relationships.rs  slide_parser.rs  slide_xml.rs  tex_export.rs  units.rs
deckmaster-pptx/templates/: blank.pptx
deckmaster-pptx/tests/: dump_slide_xml.rs  embedded_json_export.rs  failure_handling.rs  list_package.rs  open_package.rs  package.rs  presentation_parser.rs  presentation_xml.rs  real_world_smoke.rs  relationships.rs  round_trip.rs  slide_parser.rs  slide_xml.rs
deckmaster-pptx/tests/fixtures/: real_world_fixture.pptx
docs/: DECKPKG_SPEC.md
skills/deckmaster-deck/: SKILL.md
skills/deckmaster-deck/evals/: evals.json
