[package]
name = "deckmaster-pptx"
version = "0.2.0"
edition = "2021"

[dependencies]
deckmaster-core = { path = "../deckmaster-core" }
thiserror = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.38"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
serde_json = "1"
